--- a/client/src/components/navbar/Navbar.scss
+++ b/client/src/components/navbar/Navbar.scss
@@ -13,7 +13,7 @@
         color: black;
     }
     .container{
-        width: 75%;
+        width: 85%;
         display: flex;
         justify-content: space-between;
         padding: 20px 0px;
@@ -52,6 +52,7 @@
                     gap: 10px;
                     position: absolute;
                     top: 50px;
+                    right: 0px;
                     padding: 20px;
                     background-color: white;
                     border-radius: 10px;
@@ -94,13 +95,12 @@
     }
     .menu{
         display: flex;
-        width: 75%;
+        width: 50%;
         padding: 10px 0px;
         justify-content: space-between;
         font-weight: 300;
         color: gray;
         font-family: "Momtserrat", sans-serif;
         font-size: 14px;
-        // background-color: white;
     }
 }
