--- a/client/src/components/featured/Featured.scss
+++ b/client/src/components/featured/Featured.scss
@@ -9,7 +9,6 @@
         width: 85%;
         align-items: center;
         .left{
-            flex:2;
             display: flex;
             flex-direction: column;
             gap: 30px;
@@ -28,6 +27,7 @@
                 background-color: white;
                 border-radius: 5px;
                 height: 50px;
+                width: 650px;
                 .searchInput{
                     display: flex;
                     align-items: center;
@@ -70,10 +70,9 @@
             }
         }
         .right{
-            flex:1;
             height: 100%;
             img{
-                padding-left: 300px;
+                padding-left: 200px;
                 height: 100%;
                 object-fit: contain;
             }
