--- a/client/src/components/navbar/Navbar.scss
+++ b/client/src/components/navbar/Navbar.scss
@@ -7,6 +7,7 @@
     transition: 0.5s all ease;
     position: sticky;
     top: 0;
+    z-index: 999;
 
     &.active{
         background-color: #fbfbfb;
@@ -95,7 +96,7 @@
     }
     .menu{
         display: flex;
-        width: 50%;
+        width: 85%;
         padding: 10px 0px;
         justify-content: space-between;
         font-weight: 300;
