--- a/client/src/components/slide/Slide.scss
+++ b/client/src/components/slide/Slide.scss
@@ -7,6 +7,7 @@
 
         h1{
             margin-bottom: 20px;
+            margin-left: 14px;
         }
 
         .carousel-prev,.carousel-next{
