--- a/client/src/components/catCard/CatCard.scss
+++ b/client/src/components/catCard/CatCard.scss
@@ -1,16 +1,17 @@
 .catCard{
-    width: 252px;
-    height: 344px;
+    width: 230px;
+    height: 320px;
     color: white;
     border-radius: 5px;
     cursor: pointer;
     position: relative;
-    margin-left: 2px;
+    margin-left: 15px;
 
     img{
         width: 100%;
         height: 100%;
         object-fit: cover;
+        border-radius: 5px;
     }
 
     .desc{
