project card slider added

--- a/client/src/components/slide/Slide.scss
+++ b/client/src/components/slide/Slide.scss
@@ -6,8 +6,9 @@
         width: 85%;
 
         h1{
-            margin-bottom: 20px;
+            margin-bottom: 25px;
             margin-left: 14px;
+            font-weight: 500;
         }
 
         .carousel-prev,.carousel-next{
